feat(EnchantManager): Enchantment Lore Parsing's Highlight Enchantments now supports RGB colors instead of just restricted colors feat: migrate hardcoded § tooltip strings to Component with translation keys perf: cache first tooltip components by ItemStack reference equality fix(PlayerListener): skip enchantment lore lines during Roman numeral replacement fix: improved text replacement for Enchantment and Roman Numerals Parsing refactor: EnchantmentSettingsGui removed, merged into SettingsGui refactor(EnchantManager): migrate enchant formatting from § strings to Component refactor(RomanNumeralParser): replace string-based numeral replacement with Component-aware approach